--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
             <h2 id="count-el">0</h2>
             <button id="increment-btn" onclick="increment()">INCREMENT</button>
             <button id="save-btn" onclick="save()">SAVE</button>
-            <p id="save-el">Previous entries: </p>
+            <p>Previous entries: </p>
+            <p id="save-el"></p>
+            <button id="clear-btn" onclick="clearall()">CLEAR</button>
         </div>
         <script src="jscode.js"></script>
     </body>
