--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Counter Everything:</h1>
+            <h1>My Counter:</h1>
             <h2 id="count-el">0</h2>
             <button id="increment-btn" onclick="increment()">INCREMENT</button>
             <button id="save-btn" onclick="save()">SAVE</button>
