--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
             <button id="increment-btn" onclick="increment()">INCREMENT</button>
             <button id="save-btn" onclick="save()">SAVE</button>
             <p>Previous entries: </p>
-            <p id="save-el"></p>
+            <div class="entries">
+                <p id="save-el">- </p>
+            </div>           
             <button id="clear-btn" onclick="clearall()">CLEAR</button>
+            <p>Total entries: </p>
+            <p id="total-el">0</p>
         </div>
         <script src="jscode.js"></script>
     </body>
