Update SASS and content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Counter App</title>
+        <title>Counter App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+        <p>Check this app to count anything you want!</br>
+            It's just as simple as it sounds.
+        </p>
+        
         <div class="container">
-            <h1>My Counter:</h1>
+            <h1>Counter:</h1>
             <h2 id="count-el">0</h2>
             <button id="increment-btn" onclick="increment()">INCREMENT</button>
             <button id="save-btn" onclick="save()">SAVE</button>
@@ -19,6 +24,19 @@
             <p>Total entries: </p>
             <p id="total-el">0</p>
         </div>
+
+        <div class="resume">
+            <div class="resume_content">
+              <img class="image_resume" src="lucca.png" alt="lucca-personal-profile"></td>
+            </div>
+            <div class="resume_text">
+              <p id="title">Lucca Ferrari</p>
+              <p>Front-End Web developer.</p>
+              <p>Sao Paulo, Brazil.</p>
+              <p>Email: luccaferrari89@gmail.com</p>
+            </div>
+        </div>
+
         <script src="jscode.js"></script>
     </body>
 </html>
