Added Sum and Average results of entries

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
                 <p id="save-el">- </p>
             </div>           
             <button id="clear-btn" onclick="clearall()">CLEAR</button>
-            <p>Total entries: </p>
-            <p id="total-el">0</p>
+            <div class="results">
+                <p>Total of entries: </p>
+                <p>Sum of entries: </p>
+                <p>Average of entries: </p>
+                <p id="total-el">0</p>       
+                <p id="sum-el">0</p>
+                <p id="avg-el">0</p>
+            </div>
+            
         </div>
 
         <div class="resume">
