Updates on content

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             
         </div>
 
+        <p>App created by:</p>
+
         <div class="resume">
             <div class="resume_content">
               <img class="image_resume" src="lucca.png" alt="lucca-personal-profile"></td>
